--- a/cashcard/build.gradle
+++ b/cashcard/build.gradle
@@ -17,10 +17,12 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher' // See https://docs.gradle.org/8.3/userguide/upgrading_version_8.html#test_framework_implementation_dependencies
-     implementation 'org.springframework.data:spring-data-jdbc'
-   implementation 'com.h2database:h2'
+
+    implementation 'org.springframework.data:spring-data-jdbc'
+    implementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
@@ -29,15 +31,15 @@ tasks.named('test') {
 
 // This section causes useful test output to go to the terminal.
 test {
- testLogging {
-     events "passed", "skipped", "failed" //, "standardOut", "standardError"
+    testLogging {
+        events "passed", "skipped", "failed" //, "standardOut", "standardError"
 
-     showExceptions true
-     exceptionFormat "full"
-     showCauses true
-     showStackTraces true
+        showExceptions true
+        exceptionFormat "full"
+        showCauses true
+        showStackTraces true
 
-     // Change from false to true
-     showStandardStreams = true
- }
+        // Change to `true` for more verbose test output
+        showStandardStreams = false
+    }
 }
